changed to java run during startup